# nifty-schema

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  hatch_build.py  pyproject.toml
.github/workflows/: generate-code.yml
examples/: create.cxx  create.py  read.cxx  read.py  utils.py
proto/: nifty_common.proto
proto/nifty_common/v1/: nifty_common.proto
src/nifty_common/: __init__.py  conversion.py  validation.py
tests/: test_conversion.py  test_installation.py
