[project]
name = "nifty-common-schema"
version = "0.1.0"
description = "Universal board state contract for Nifty teams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = ["*ipynb"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
isort = { combine-as-imports = true, known-first-party = ["agents"] }

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["E501"]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
