[project]
name = "nifty-common"
version = "0.1.0"
description = "Universal board state contract for Nifty teams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "protobuf>=6.33.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["nifty_common"]

[tool.uv.sources]
nifty_common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/nifty_common"]

[tool.hatch.build.targets.wheel.hooks.custom]


[tool.ruff]
line-length = 100
target-version = "py314"
exclude = ["*ipynb"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
isort = { combine-as-imports = true, known-first-party = ["agents"] }

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["E501"]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "cmake>=4.2.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
